# glTemplate

./: .gitmodules  CMakeLists.txt
source/: main.cpp
